# OptiRoute2.0

./: .gitignore  App.js  README.md  app.json  eas.json  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/data/: items.csv  shops.csv
backend/server/: __init__.py  auth.py  db.py  getDistance.py  route.py  tspOptimised.py
backend/server/data/: data.csv
src/components/: Button.js  Header.js  ItemData.js  ItemListItem.js  Logo.js
src/core/: theme.js
src/helpers/: apiUrl.js
src/screens/: Dashboard.js  LoginScreen.js  MapView.js  PlanScreen.js  RegisterScreen.js  ResetPasswordScreen.js  StartScreen.js  index.js
